--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,19 +1,31 @@
-/* applies to anything of class "example-class-selector" */
-.example-class-selector {
-	margin-top: 2em;
-}
-
-/* applies to any <p> descendants of an element of class "example-class-selector" */
-.example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
-	color: #CC00AA;
-}
-
-/* this style exists to make it obvious that you've successfully linked
-   the CSS to the page. feel free to remove it once the link is working. */
 body {
-     border: 1px dotted gray;
-     padding: 20px;
+     background-color: #f6f6f6;
+     font-family: Futura;
+     font-size: 15px;
+     background-size: 100%;
+}
+
+@media (max-width: 1100px) {
+  body { font-size: .5em; }
+}
+
+#header {
+     margin-left: 2em;
+     margin-right: 2em;
+     margin-top: 2em;
+     font-size: 1.5em;
+}
+
+#sub_header {
+     font-size: .8em;
+}
+
+#projects {
+     height: 100%;
+     width: 100%;
+     margin-right: auto;
+     margin-left: auto;
+     text-align: center;
 }
 
 .jumbotron {
@@ -24,11 +36,31 @@ body {
 .jumbotron:after {
      content:"";
      background: url("http://lorempixel.com/1140/283");
-     opacity: 0.2;
+     opacity: 0.3;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      position: absolute;
      z-index: -1;	
+}
+
+#group_projs {
+     margin-right: auto;
+     margin-left: auto;
+     width: 98%;
+
+}
+
+.project {
+     float: left;
+     text-align: center;
+     padding-left: 5em;
+     padding-right: 3em;
+}
+
+img {
+     width: 100%;
+     padding: 1em;
+     height: auto;
 }
